# PDESsolver

./: PDE.py  PDES.py  backend.py  pyproject.toml
Auxs/: FuncAux.py  Visualize.py
Disc/: Disc.py  __init__.py
Disc/boundaries/: boundary_base.py  dirichlet.py  neumann.py  periodic_example.py  robin.py
Solvers/: CN.py  RKF.py  __init__.py  bdf2.py  solver_base.py  solver_base2.py
Tests/: Teste (1).py  Teste copy.py  Teste.py  burgers.py  diag.py  eqadveccao copy.py  eqadveccao.py  eqcalor.py  fitzhugh_nagumo_2d.py  fitzhugh_nagumo_2d_visual.py  inspeciona_disc.py  outro.py  reacao1d.py  reacao1d_avancada copy.py  reacao1d_avancada.py  reacao2d.py  test_adveccao.py  test_burgers.py  test_calor.py  test_fitzhugh.py  test_reacao1d.py
